# decenttree

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  bionj.cpp  bionj2.cpp  clustertree.h  copy_to_iqtree2_master.sh  decentTree.sln  decentTree.vcxproj  decenttree.cpp  decenttree_config.h.in  decenttree_msvc_config.h  decenttree_update.sh  distancematrix.h  fancyrapidnj.h  flatmatrix.cpp  hammingdistance.h  headeronlydecenttree.cpp  nj.h  rapidnj.h  sequence.cpp  sequence.h  starttree.cpp  starttree.h  stitchup.cpp  upgma.h
doco/: API_Reference.md  Algorithms.md  Code_Examples.md  Command_Line_Examples.md  Compilation.md  Compilation_on_Linux.md  Compilation_on_MacOS_X.md  Compilation_on_Windows.md  Installation.md  Running_DecentTree.md  pydecenttree.md
example/: 3x3.phy  CMakeLists.txt  differentvector.cpp  example.dist  example_matrix.cpp  example_matrix.h  fakevector.h  headeronlydecenttree.cpp  interleaved_example.phy  uncorrected.dist  vectordecenttree.cpp
pydecenttree/: CMakeLists.txt  __init__.py  pydecenttree.cpp  setup.py  test_pydecenttree.py
utils/: argument.cpp  hammingdistance.h  heapsort.h  my_assert.h  operatingsystem.cpp  parallel_mergesort.h  timeutil.h
zlib-1.2.7/: CMakeLists.txt  gzlib.c  inflate.c
